# mvp_ml

./: .gitignore  Logistic_Regression.joblib  README.md  mvp_ml.html  mvp_ml.ipynb  mvp_ml.py  mvp_ml.qmd  pyproject.toml  requirements.txt  results.npy  y_chest_pred.npy
datasets/chest/y/: y_0.npy
datasets/chest_xray/imgs_array/: y_chest.npy
models/: final_clf.joblib  results.npy
