[project]
name = "mvp-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fsspec>=2024.10.0",
    "ipykernel>=6.29.5",
    "kagglehub>=0.3.4",
    "matplotlib>=3.9.3",
    "numpy>=2.2.0",
    "pillow>=11.0.0",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.14.0",
]
